goom: Initialize the goom struct only once we know width/height and recreate it if those change

Fixes crash when the width and/or height is changing.

https://bugzilla.gnome.org/show_bug.cgi?id=762765